align source text form and fixed text box oversizing

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+.form {
+    max-width: 800px;
+    box-sizing: border-box;
+    position: relative;
+    margin: 0 auto;
+}
