--- a/src/components/forms/FormTextArea.css
+++ b/src/components/forms/FormTextArea.css
@@ -1,3 +1,12 @@
+div {
+    padding: 5px;
+}
+
 textarea {
-    border-radius: 5px;
+    box-sizing: border-box;
+    max-width: 90%;
+    margin: 0 auto;
+    padding: 5px;
+    overflow: scroll;
+    resize: none;
 }
